# hotclock

./: .gitignore  .rustfmt.toml  AGENTS.md  BENCHMARKS.md  Cargo.toml  HANDOFF.md  LICENSE-APACHE  PROJECT.md  README.crates-io.md  README.md  SIGNAL_PROBED_RDPMC.md
.github/scripts/: run-comparison-bins.sh
.github/workflows/: bench-skew.yml  bench.yml  ci.yml  comparison-bench.yml  raw-clock-matrix.yml  runtime-selection-bench.yml  runtime-selection-sweep.yml  selection-experiment.yml
benches/: REPRODUCING.md  aggregate-skewmono.py  baseline-2026-05-11.md  baseline-2026-05-13.md  baseline-2026-05-14.md  clock_candidates.rs  clock_validation.rs  inline-selection-benchmark-2026-05-08.md  instant.rs  m7i-gnu-high-confidence-2026-05-08.md  report.py  run-skewmono-aws.sh  run-skewmono-lambda.sh  run-skewmono-local.sh  runtime-selection-validation-2026-05-08.md  runtime_selection_proof.md  selection-falsification-2026-05-09.md  selection-validation-2026-05-07.md  selection_dispatch.rs  skew.rs  skewmono-apple-silicon-m1.json  skewmono-c7g-4xlarge.json  skewmono-github-windows-x86_64.json  skewmono-lambda-x86_64.json  skewmono-m7i-metal-24xl.json  skewmono-t3-medium.json  summary.py  target-distribution.md  ticks.rs  verify-skewmono.sh
benches/assets/: benchmark-heatmap.dot  benchmark.dot  build-cell-report.py  render.py  render_benchmark.py
benches/aws-expanded-clock-benchmarks-2026-05-07/: aws-full-aarch64-gnu-lambda-expanded.json  aws-full-aarch64-musl-lambda-expanded.json  aws-full-arm-kvm-t4g-aarch64-gnu-expanded.json  aws-full-arm-kvm-t4g-aarch64-musl-expanded.json  aws-full-arm-metal-c7g-aarch64-gnu-expanded.json  aws-full-arm-metal-c7g-aarch64-musl-expanded.json  aws-full-x86-kvm-t3-i686-gnu-expanded.json  aws-full-x86-kvm-t3-i686-musl-expanded.json  aws-full-x86-kvm-t3-x86_64-gnu-expanded.json  aws-full-x86-kvm-t3-x86_64-musl-expanded.json  aws-full-x86-metal-m7i-i686-gnu-expanded.json  aws-full-x86-metal-m7i-i686-musl-expanded.json  aws-full-x86-metal-m7i-x86_64-gnu-expanded.json  aws-full-x86-metal-m7i-x86_64-musl-expanded.json  aws-full-x86_64-gnu-lambda-expanded.json  aws-full-x86_64-musl-lambda-expanded.json  summary.md
benches/aws-four-target-matrix-2026-05-04/: aws-i686-gnu-bare-metal-m7i-4target.json  aws-i686-gnu-kvm-t3-4target.json  aws-i686-gnu-lambda-4target.json  (+9 more)
benches/results/: build.py
examples/: basic.rs  benchmark.rs  comparison_chrono.rs  comparison_clock.rs  comparison_clocksource.rs  comparison_coarsetime.rs  comparison_fastant.rs  comparison_hotclock.rs  comparison_minstant.rs  comparison_quanta.rs  comparison_std.rs  comparison_tick_counter_elapsed.rs  comparison_tick_counter_start.rs  comparison_time.rs  raw_clock_matrix.rs  raw_clock_matrix_analyze.rs  runtime_selection_analyze.rs  runtime_selection_report.rs
src/: background.rs  bench.rs  bench_internals.rs  calibration.rs  convert.rs  counter_eval.rs  cycle_ticks.rs  cycles.rs  instant.rs  lib.rs  selection.rs  ticks.rs
tests/: x86_64_linux_patch.rs
tools/raw-clock-runner/: Cargo.toml
tools/raw-clock-runner/src/: main.rs
(+129 files in other folders)
