[package]
name = "hotclock"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Spencer Creasey"]
repository = "https://github.com/spence/hotclock"
description = "ultra-fast timer for benchmarks, profilers, and hot loops"
keywords = ["timer", "clock", "benchmark", "profiling", "rdtsc"]
categories = ["hardware-support", "development-tools::profiling"]

[dev-dependencies]
chrono = "0.4.44"
clock = "0.4.0"
clocksource = "1.0.0"
coarsetime = "0.1.37"
criterion = "0.8"
fastant = "0.1.11"
minstant = "0.1.7"
quanta = "0.12.6"
tick_counter = "0.4.5"
time = "0.3.47"

[[bin]]
name = "hotclock"
path = "src/bin/hotclock.rs"

[[bench]]
name = "instant"
harness = false

[[bench]]
name = "selection_dispatch"
harness = false

[[example]]
name = "basic"

[[example]]
name = "benchmark"
