[package]
name = "tach"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Spencer Creasey"]
repository = "https://github.com/spence/tach"
description = "ultra-fast drop-in replacement for std::time::Instant"
keywords = ["timer", "clock", "benchmark", "profiling", "rdtsc"]
categories = ["hardware-support", "development-tools::profiling"]
exclude = [
  "benches/assets/**",
  "BENCHMARKS.md",
]

[dev-dependencies]
criterion = "0.8"
fastant = "0.1.11"
minstant = "0.1.7"
quanta = "0.12.6"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
wasm-bindgen = "0.2"

[[bench]]
name = "instant"
harness = false

[[example]]
name = "basic"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
